--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "line-style-chat",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "express-fileupload": "^1.4.0"
   }
 }
