--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "socket.io": "^4.7.5",
-    "express-fileupload": "^1.4.0"
+    "express-fileupload": "^1.4.0",
+    "cookie-parser": "^1.4.6"
   }
 }
